# uPowerSimulator

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
docs/: ExistingInstructionsList.txt  readme.txt  upowersim.md
examples/: assembly.s
include/: readme.txt  simulator.h  uPowerSim.h
lib/: readme.txt
src/: instr_translator.c  readme.txt  simulator.c  uPowerSim.c
